Configuração Kestrel e corretivos gerais

--- a/VolunTree_API/wwwroot/index.html
+++ b/VolunTree_API/wwwroot/index.html
@@ -11,7 +11,7 @@
         font-family: montserrat;
       }
       #background-home{
-        background-image:url('ongs.avif');
+        background-image:url('ongs.jpeg');
         height:1200px;
       }#h2-cor{color:white;}#h3-cor{color:wheat;}#input-height{height: 70%;}
     </style>
