--- a/VolunTree_API/wwwroot/ongs.html
+++ b/VolunTree_API/wwwroot/ongs.html
@@ -32,12 +32,12 @@
       </button>
       <div class="collase navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active  text-light disabled" aria-current="page" href="#">Home</a>
+          <a class="nav-link active  text-light" aria-current="page" href="index.html">Home</a>
           <!--<a class="nav-link  text-light" href="#">Features</a>
           <a class="nav-link  text-light" href="#">Pricing</a>
           <a class="nav-link  text-light" href="#">Disabled</a>-->
           <a class="nav-link  text-light" href="voluntarios.html">Voluntariado</a>
-          <a class="nav-link  text-light" href="ongs.html">ONGs</a>
+          <a class="nav-link  text-light disabled" href="#">ONGs</a>
           <a class="nav-link  text-light" href="#">Sobre o Volutree</a>
         </div>
       </div>
@@ -58,10 +58,17 @@
 
   <!--============INICIO DO <MAIN>============-->
   <!--div BACKGROUD QG02-->
-  <div id="background-home">
-    <h2 id="h2-cor">Unidos para uma evolução maior</h2><!--QG03-->
-    <h3 id="h3-cor">Juntos seremos imbativeis</h3>
-  </div><!--background-->
+    <main class="mt-5">
+      <div class="container">
+        <h1 id="Ongs-title" class="h1">Ongs</h1>
+        <div class="border rounded">
+          <div class="ong-card mx-2 border-top border-bottom">
+            <h3>nome</h3>
+            <p>descricao</p>
+          </div>
+        </div>
+      </div>
+    </main>
 
   
   
@@ -118,28 +125,13 @@
   <!--=============FIM DO <MAIN>=============-->
     
   <!--Parte que da página HTML Sobre.html-->  
-  <div class="d-flex"> <!--tirei o row-->
-    <div class="col-4 p-2">
-      <div class="list-group" id="list-tab" role="tablist">
-        <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Voluntario</a>
-        <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Doador</a>
-        <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">ONGs</a>
-      </div>
-    </div>
-    <div class="col-8 p-2">
-      <div class="tab-content" id="nav-tabContent">
-        <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">Faz parte da nossa solução, esse usuário é o principal meio de conectar as ONGs com serviços Voluntarios.</div>
-        <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">Doador contribui com medicamentos, roupas, etc... </div>
-        <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list">As ONGs são quem organiza a ação comunitária.</div>
-      </div>
-    </div>
-  </div><!--HTML sobreee-->
+
 
 
 
   <!--_____________INICIO DO <FOOTER>_____________-->
   <footer class="container-fluid  bg-body-tertiary ">
-    <div class="row justify-content-center my-4 text-secondary text-center">
+    <div class="row justify-content-center mt-4 text-secondary text-center">
       <h3>Equipe de Desenvolvimento</h3>
       <div class="d-flex justify-content-center"><!--tirei o row-->
         <p class="col-2">
