--- a/VolunTree_API/wwwroot/ongs.html
+++ b/VolunTree_API/wwwroot/ongs.html
@@ -60,7 +60,15 @@
   <!--div BACKGROUD QG02-->
     <main class="mt-5">
       <div class="container">
-        <h1 id="Ongs-title" class="h1">Ongs</h1>
+        <div class="row">
+          <div class="col-6">
+          <h1 id="Ongs-title" class="h1">Ongs</h1>
+          </div>
+          <div class="col-6">
+            <button class="btn btn-success"><a href="cadastroong.html">cadastra ong</a></button>
+          </div>
+        </div>
+
         <div class="border rounded">
           <div class="ong-card mx-2 border-top border-bottom">
             <h3>nome</h3>
