--- a/VolunTree_API/wwwroot/ongs.html
+++ b/VolunTree_API/wwwroot/ongs.html
@@ -6,6 +6,7 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="main.css" rel="stylesheet">
+    <link href="ong.css" rel="stylesheet">
     <style>
       h2, h3{
         font-family: montserrat;
@@ -60,19 +61,19 @@
   <!--div BACKGROUD QG02-->
     <main class="mt-5">
       <div class="container">
-        <div class="row">
-          <div class="col-6">
+        <div class="row justify-content-between">
+          <div class="col-3">
           <h1 id="Ongs-title" class="h1">Ongs</h1>
           </div>
-          <div class="col-6">
-            <button class="btn btn-success"><a href="cadastroong.html">cadastra ong</a></button>
+          <div class="col-3">
+            <button class="btn btn-success px-4"><a href="cadastroong.html">cadastrar ong</a></button>
           </div>
         </div>
 
         <div class="border rounded">
           <div class="ong-card mx-2 border-top border-bottom">
-            <h3>nome</h3>
-            <p>descricao</p>
+            <h3 class="ms-3">nome</h3>
+            <p class="ms-3">descricao</p>
           </div>
         </div>
       </div>
