--- a/VolunTree_API/wwwroot/index.html
+++ b/VolunTree_API/wwwroot/index.html
@@ -38,7 +38,7 @@
           <a class="nav-link  text-light" href="#">Disabled</a>-->
           <a class="nav-link  text-light" href="voluntarios.html">Voluntariado</a>
           <a class="nav-link  text-light" href="ongs.html">ONGs</a>
-          <a class="nav-link  text-light" href="#">Sobre o Volutree</a>
+          <a class="nav-link  text-light" href="sobre.html">Sobre o Volutree</a>
         </div>
       </div>
       
@@ -119,14 +119,14 @@
     
   <!--Parte que da página HTML Sobre.html-->  
   <div class="d-flex"> <!--tirei o row-->
-    <div class="col-4 p-2">
+    <div class="col-2 p-2">
       <div class="list-group" id="list-tab" role="tablist">
         <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Voluntario</a>
         <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Doador</a>
         <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">ONGs</a>
       </div>
     </div>
-    <div class="col-8 p-2">
+    <div class="col-3 p-2">
       <div class="tab-content" id="nav-tabContent">
         <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list">Faz parte da nossa solução, esse usuário é o principal meio de conectar as ONGs com serviços Voluntarios.</div>
         <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list">Doador contribui com medicamentos, roupas, etc... </div>
