--- a/VolunTree_API/wwwroot/voluntarios.html
+++ b/VolunTree_API/wwwroot/voluntarios.html
@@ -38,7 +38,7 @@
           <a class="nav-link  text-light" href="#">Disabled</a>-->
           <a class="nav-link  text-light disabled" href="#">Voluntariado</a>
           <a class="nav-link  text-light" href="ongs.html">ONGs</a>
-          <a class="nav-link  text-light" href="#">Sobre o Volutree</a>
+          <a class="nav-link  text-light" href="sobre.html">Sobre o Volutree</a>
         </div>
       </div>
       
