--- a/VolunTree_API/wwwroot/ongs.html
+++ b/VolunTree_API/wwwroot/ongs.html
@@ -70,11 +70,8 @@
           </div>
         </div>
 
-        <div class="border rounded">
-          <div class="ong-card mx-2 border-top border-bottom">
-            <h3 class="ms-3">nome</h3>
-            <p class="ms-3">descricao</p>
-          </div>
+        <div class="border rounded" id="menu-box">
+          
         </div>
         <!--USAR no Arquivo ONGS para mudar de página TESTE:SEM O D-NONE -->
         <div class="btn-toolbar p-2" role="toolbar" aria-label="Toolbar with button groups">
@@ -164,6 +161,26 @@
     </div>
   </footer>
   <!--_________________FIM DO <FOOTER>_________________-->
+  <script>
+    fetch("https://localhost:7071/api/Ongs",{
+      method: 'GET',
+      mode: 'no-cors',
+    }).then(res=>res.json())
+    .then(dados=>{
+      var display = document.querySelector("#menu-box")
+      dados.forEach(element => {
+        display.innerHTML += `<div class='ong-card mx-2 border-top border-bottom'>
+          <div class="row">
+          <h3 class="col">${element.nomeOng}</h3>
+          <p class="col">email:${element.emailOng}</p>
+          </div>
+          <p class='text-secondary'>missao: ${element.missao}</p>
+          <p class='text-secondary'>necessidades: ${element.necessidades}</p>
+          </div>`;
+      });
+      console.log(dados[0]);
+    })
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
