--- a/VolunTree_API/wwwroot/cadastroong.html
+++ b/VolunTree_API/wwwroot/cadastroong.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="cadastroong.css" rel="stylesheet">
     <link href="main.css" rel="stylesheet">
 </head>
 <body>
@@ -37,67 +38,72 @@
         </div>
       </nav>
     <div>
-    <main>
-    <form class="m-3 border">
-        <h1 class="h1">Cadastrar ONG</h1>
-        <div class="p-3">
-            <div id="div-cnpj">
-                <label class="form-label" for="input-cnpj">Cnpj</label>
-                <input class="form-control" type="number" id="input-cnpj">
+        <main class="flex-grow-1">
+            <form class="m-3 border" id="form-cadastro">
+                <h1 class="h1">Cadastrar ONG</h1>
+                <div class="p-3">
+                    <div id="div-cnpj">
+                        <label class="form-label" for="input-cnpj">CNPJ</label>
+                        <input class="form-control" type="text" id="input-cnpj" required>
+                    </div>
+                    <div id="div-nome">
+                        <label class="form-label" for="input-nome">Nome da Ong</label>
+                        <input class="form-control" type="text" id="input-nome" required>
+                    </div>
+                    <div id="div-email">
+                        <label class="form-label" for="input-email">E-Mail</label>
+                        <input class="form-control" type="email" id="input-email" required>
+                    </div>
+                    <div id="div-telefone">
+                        <label class="form-label" for="input-telefone">Telefone</label>
+                        <input class="form-control" type="text" id="input-telefone" required>
+                    </div>
+                    <div id="div-endereco">
+                        <label class="form-label" for="input-endereco">Endereço</label>
+                        <input class="form-control" type="text" id="input-endereco" required>
+                    </div>
+                    <div id="div-contato">
+                        <label class="form-label" for="input-contato">Contato Principal</label>
+                        <input class="form-control" type="text" id="input-contato" required>
+                    </div>
+                    <div id="div-missao">
+                        <label class="form-label" for="input-missao">Missão</label>
+                        <input class="form-control" type="text" id="input-missao" required>
+                    </div>
+                    <div id="div-necessidades">
+                        <label class="form-label" for="input-necessidades">Necessidades</label>
+                        <input class="form-control" type="text" id="input-necessidades" required>
+                    </div>
+                    <div><button type="submit" class="btn btn-success mt-3">Enviar</button></div>
+                </div>
+            </form>
+        </main>
+        <footer class="container-fluid bg-body-tertiary">
+            <div class="row justify-content-center mt-2 text-secondary text-center">
+                <h3>Equipe de Desenvolvimento</h3>
+                <div class="d-flex justify-content-center">
+                    <p class="col-2">
+                        Caio Pequeno    <br />
+                        Fabio Henrique  <br />
+                        Hudson Henrique <br />
+                        Kayky Alves     <br />
+                        Paulo Bispo
+                    </p>
+                    <p class="col-1">
+                        Back-End <br />
+                        Back-End <br />
+                        Back-End <br />
+                        Front-End<br />
+                        Front-End<hr />
+                    </p>
+                </div>
             </div>
-            <div id="div-nome">
-                <label class="form-label" for="input-nome">Nome da Ong</label>
-                <input class="form-control" type="text" id="input-nome">
-            </div>
-            <div id="div-email">
-                <label class="form-label" for="input-email">email</label>
-                <input class="form-control" type="email" id="input-email">
-            </div>
-            <div id="div-endereco">
-                <label class="form-label" for="input-endereco">endereco</label>
-                <input class="form-control" type="text" id="input-endereco">
-            </div>
-            <div id="div-contato">
-                <label class="form-label" for="input-contato">contato principal</label>
-                <input class="form-control" type="number" id="input-">
-            </div>
-            <div id="div-missao">
-                <label class="form-label" for="input-missao">missão</label>
-                <input class="form-control" type="text" id="input-missao">
-            </div>
-            <div id="div-necessidades">
-                <label class="form-label" for="input-necessidades">necessidades
-                </label>
-                <input class="form-control" type="text" id="">
-            </div>
-            <div><button class="btn btn-success mt-3">enviar</button></div>
-        </div>
-    </form>
-</div>
-</main>
-<footer class="container-fluid  bg-body-tertiary ">
-    <div class="row justify-content-center mt-2 text-secondary text-center">
-      <h3>Equipe de Desenvolvimento</h3>
-      <div class="d-flex justify-content-center"><!--tirei o row-->
-        <p class="col-2">
-          Caio Pequeno    <br/>
-          Fabio Henrique  <br/>
-          Hudson Henrique <br/>
-          Kayky Alves     <br/>
-          Paulo Bispo     
-        </p>
-        <p class="col-1">
-          Back-End <br/>
-          Back-End <br/>
-          Back-End <br/>
-          Front-End<br/>
-          Front-End<hr/>
-        </p>
-      </div>
-    </div>
-  </footer>
-    <!--_________FIM DO <FOOTER>_________________-->
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+        </footer>
+
+
+        <!--_________FIM DO <FOOTER>_________________-->
+        <script src="cadastroong.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
