--- a/VolunTree_API/wwwroot/ongs.html
+++ b/VolunTree_API/wwwroot/ongs.html
@@ -76,19 +76,19 @@
         <!--USAR no Arquivo ONGS para mudar de página TESTE:SEM O D-NONE -->
         <div class="btn-toolbar p-2" role="toolbar" aria-label="Toolbar with button groups">
           <div class="btn-group me-2" role="group" aria-label="First group">
-            <button type="button" class="btn btn-primary">1</button>
-            <button type="button" class="btn btn-info">2</button>
-            <button type="button" class="btn btn-primary">3</button>
+            <button type="button" class="btn btn-secondary">1</button>
+            <button type="button" class="btn btn-secondary">2</button>
+            <button type="button" class="btn btn-secondary">3</button>
             
           </div>
           <div class="btn-group me-2" role="group" aria-label="Second group">
             <button type="button" class="btn btn-secondary">4</button>
-            <button type="button" class="btn btn-info">5</button>
-            <button type="button" class="btn btn-primary">6</button>
+            <button type="button" class="btn btn-secondary">5</button>
+            <button type="button" class="btn btn-secondary">6</button>
             <button type="button" class="btn btn-secondary">7</button>
           </div>
           <div class="btn-group" role="group" aria-label="Third group">
-            <button type="button" class="btn btn-info">8</button>
+            <button type="button" class="btn btn-secondary">8</button>
           </div>
         </div>
       </div><!--FIM DO CONTAINER-->
